# IT_project_homework

.github/workflows/: release-tag.yml
backend-django/: data.json  db_init.json  pyproject.toml
backend-django/application/: main.py  settings.py  urls.py  wsgi.py
backend-django/common/: fu_auth.py  fu_cache.py  fu_crud.py
backend-django/contest/: api.py  filters.py  models.py  schemas.py
backend-django/core/auth/: auth_api.py  auth_schema.py  auth_service.py
backend-django/core/dept/: dept_schema.py
backend-django/core/dict/: dict_schema.py
backend-django/core/dict_item/: dict_item_schema.py
backend-django/core/file_manager/: file_manager_schema.py  file_manager_services.py
backend-django/core/login_log/: login_log_schema.py
backend-django/core/menu/: menu_schema.py
backend-django/core/permission/: permission_schema.py
backend-django/core/post/: post_schema.py
backend-django/core/role/: role_schema.py
backend-django/core/user/: user_api.py  user_schema.py
backend-django/env/: dev_env.py
backend-django/n4j/: apps.py  services.py  views.py
backend-django/problem/: api.py  models.py  schemas.py
docs/email-demo/: cuilidong-demo.md  luzhongzheng-demo.md  wangluhua-demo.md  wujinhao-demo.md
web/: package.json  pnpm-lock.yaml
web/apps/web-ele/: .env.development  .env.production  package.json  vite.config.mts
web/apps/web-ele/src/api/: contest.ts  neo4j.ts  problem.ts
web/apps/web-ele/src/api/core/: file.ts  role.ts  (+1 more)
web/apps/web-ele/src/layouts/: basic.vue
work/: ~$实验1指导书.docx  实验1指导书.docx  实验2指导书.docx  实验3 指导书.docx  实验4指导书1.docx
(+21 files in other folders)
